conf: Edit .gitignore
Add rules

- hidden/
- *.go
- keyfile.*

--- a/.gitignore
+++ b/.gitignore
@@ -258,3 +258,10 @@ tags
 .ionide
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,python,jupyternotebooks,vim,visualstudiocode
+
+## custom
+
+keyfile.*
+*.go
+hidden/**
+
